plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'org.hibernate.orm' version '6.6.3.Final'
	id 'org.graalvm.buildtools.native' version '0.10.4'
	id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.prakass'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-crypto:6.3.0'
	implementation 'org.postgresql:postgresql:42.7.3'
	implementation 'org.mapstruct:mapstruct:1.6.0'
	implementation 'org.bouncycastle:bcprov-jdk18on:1.79'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.0'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-core:5.14.2'
	testImplementation 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

hibernate {
	enhancement {
		enableAssociationManagement = true
	}
}

spotless {
	java {
		googleJavaFormat()
	}
}

tasks.check.dependsOn 'spotlessApply'

tasks {
	compileJava {}
	spotlessApply {}
}

tasks.named('test') {
	useJUnitPlatform()
}
